--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
+  <link
+    href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700&display=swap"
+    rel="stylesheet"
+  >
   <title>Recipe Library</title>
   <link
     rel="stylesheet"
@@ -20,70 +24,72 @@
   </header>
 
   <section class="options-container">
-    <form id="recipeFilters">
-      <!-- Kitchen filter form -->
-      <div class="form">
-        <h3>Filter on kitchen</h3>
+    <!-- Kitchen filter form -->
+    <div class="form">
+      <h3>Filter on kitchen</h3>
+      <div class="btn-group">
         <label class="btn-filter">
           <input
-            type="radio"
+            type="checkbox"
             name="kitchen"
             value="all"
-          > All
+          > <span>All</span>
         </label>
         <label class="btn-filter">
           <input
-            type="radio"
+            type="checkbox"
             name="kitchen"
             value="italian"
           >
-          Italian
+          <span>Italian</span>
         </label>
         <label class="btn-filter">
           <input
-            type="radio"
+            type="checkbox"
             name="kitchen"
             value="thai"
           >
-          Thai
+          <span>Thai</span>
         </label>
         <label class="btn-filter">
           <input
-            type="radio"
+            type="checkbox"
             name="kitchen"
             value="mexican"
           >
-          mexican
+          <span>Mexican</span>
         </label>
         <label class="btn-filter">
           <input
-            type="radio"
+            type="checkbox"
             name="kitchen"
             value="korean"
           >
-          Korean
+          <span>Korean</span>
         </label>
       </div>
+    </div>
 
-      <!-- Sort filter form -->
-      <div class="form">
-        <h3>Sort on time</h3>
+    <!-- Sort filter form -->
+    <div class="form">
+      <h3>Sort on time</h3>
+      <div class="btn-group">
         <label class="btn-sort">
           <input
             type="radio"
             name="timeFilter"
             value="ascending"
-          > Let's make it quick
+          > <span>A quick one</span>
         </label>
         <label class="btn-sort">
           <input
             type="radio"
             name="timeFilter"
             value="descending"
-          > I got time!
+          > <span>I got time</span>
         </label>
       </div>
-    </form>
+    </div>
 
     <!-- Surprise me button -->
     <div class="form">
@@ -96,6 +102,47 @@
     </div>
   </section>
 
+  <!-- Recipe cards -->
+  <main>
+    <section class="recipes-container">
+      <article class="recipe-grid-card">
+        <img
+          class="card-image"
+          src=""
+          alt=""
+        >
+        <h3>Some title</h3>
+        <p></p>
+      </article>
+      <article class="recipe-grid-card">
+        <img
+          class="card-image"
+          src=""
+          alt=""
+        >
+        <h3>Some title</h3>
+        <p></p>
+      </article>
+      <article class="recipe-grid-card">
+        <img
+          class="card-image"
+          src=""
+          alt=""
+        >
+        <h3>Some title</h3>
+        <p></p>
+      </article>
+      <article class="recipe-grid-card">
+        <img
+          class="card-image"
+          src=""
+          alt=""
+        >
+        <h3>Some title</h3>
+        <p></p>
+      </article>
+    </section>
+  </main>
 
   <script src="script.js"></script>
 </body>
