add url and images to recipes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <header>
     <h1>Recipe Library</h1>
-
+    <!-- Favorites button -->
     <div class="favorites">
       <button
         id="favBtn"
@@ -72,6 +72,10 @@
           class="btn-filter"
           data-value="korean"
         >Korean</button>
+        <button
+          class="btn-filter"
+          data-value="indian"
+        >Indian</button>
       </div>
     </div>
 
