--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700&display=swap"
     rel="stylesheet"
   >
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+  >
   <title>Recipe Library</title>
   <link
     rel="stylesheet"
@@ -86,11 +90,11 @@
         <button
           class="btn-sort"
           data-value="ascending"
-        >A quick one</button>
+        >🚀 Shortest first</button>
         <button
           class="btn-sort"
           data-value="descending"
-        >I got time</button>
+        >⏳ Longest first</button>
       </div>
     </div>
 
